--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ a {
 table {
   display: inline-block;
   color: black;
-  border: 1px dashed white;
+  /* border: 1px dashed white; */
   padding: 8px;
   border-radius: 8px;
   /* font-weight: 700; */
@@ -63,12 +63,13 @@ table code {
 }
 
 table th {
+  color: white;
   font-weight: bold;
   border-radius: 2px;
   padding: 3px;
   border: 1px solid #ddd;
-  background-color: #fafafa;
-  background-image: -moz-linear-gradient(top, #fff, #f2f2f2);
+  background-color: rgb(52, 58, 70);
+  background-image: -moz-linear-gradient(top, #eee, #f2f2f2);
   background-image: -webkit-gradient(
     linear,
     0 0,
@@ -78,7 +79,11 @@ table th {
   );
   background-image: -webkit-linear-gradient(top, #fff, #f2f2f2);
   background-image: -o-linear-gradient(top, #fff, #f2f2f2);
-  background-image: linear-gradient(to bottom, #fff, #f2f2f2);
+  background-image: linear-gradient(
+    to bottom,
+    rgb(52, 58, 70),
+    rgb(52, 58, 70)
+  );
   background-repeat: repeat-x;
   font-weight: normal;
   text-align: center;
@@ -90,6 +95,15 @@ table tr td {
 
 table tr {
   text-align: center;
+}
+
+table tr:hover td {
+  /* border: 1px solid red; */
+  background: rgba(255, 255, 255, 0.5);
+}
+
+table tr td {
+  /* border: 1px solid white; */
 }
 
 table tr td:first-child {
