--- a/src/App.css
+++ b/src/App.css
@@ -49,14 +49,14 @@ table {
   display: inline-block;
   color: black;
   /* border: 1px dashed white; */
-  padding: 8px;
+  /* padding: 8px; */
   border-radius: 8px;
   /* font-weight: 700; */
 }
 
 table code {
   font-size: 12px;
-  padding: 3px;
+  padding: 6px;
   font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
   display: inline-block;
   border-radius: 2px;
