--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,7 @@ table th {
 
 table tr td {
   white-space: nowrap;
+  color: white;
 }
 
 table tr {
@@ -342,7 +343,7 @@ span.mute {
 }
 
 .btn_page {
-  padding: 0.6em 2em;
+  padding: 0.3em 1em;
   border: none;
   outline: none;
   /* color: rgb(255, 255, 255); */
