--- a/src/App.css
+++ b/src/App.css
@@ -428,3 +428,17 @@ a:active {
     50% 50% no-repeat;
   background-size: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 6px !important;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: rgb(35, 39, 47);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgb(85, 92, 107);
+}
