--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ table th {
   font-weight: bold;
   border-radius: 2px;
   border: 1px solid #ddd;
-  background-color: rgb(52, 58, 70);
+  background-color: rgb(0, 0, 0);
   background-image: -moz-linear-gradient(top, #eee, #f2f2f2);
   background-image: -webkit-gradient(
     linear,
@@ -78,11 +78,7 @@ table th {
   );
   background-image: -webkit-linear-gradient(top, #fff, #f2f2f2);
   background-image: -o-linear-gradient(top, #fff, #f2f2f2);
-  background-image: linear-gradient(
-    to bottom,
-    rgb(52, 58, 70),
-    rgb(52, 58, 70)
-  );
+  background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgb(0, 0, 0));
   background-repeat: repeat-x;
   font-weight: normal;
   text-align: center;
