--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,17 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(35, 39, 47) !important;
+  background: rgb(0, 0, 0) !important;
+  font-family: "Anonymous Pro", monospace;
+  font-family: "Bebas Neue", cursive;
+  font-family: "Roboto", sans-serif;
+  font-family: "Source Code Pro", monospace;
+  font-size: 12px;
 }
 
 code {
